# atracsyswrapper

./: .gitignore  CMakeLists.txt  conanfile.py  conanfile.txt  connectionlistener.cpp  testapp.cpp  wrappertest.cpp
geometry/: geometry001.ini  geometry002.ini  geometry003.ini  geometry004.ini  geometry005.ini
lib/: atracsysmarker.cpp  atracsysmarker.h  atracsyswrapper.cpp  atracsyswrapper.h  helpers.hpp  helpers_windows.cpp  version.cpp
src/: CMakeLists.txt
src/lib/include/atracsyswrapper/: atracsysmarker.h  atracsyswrapper.h
src/lib/src/: atracsysdevice.cpp  atracsysdevice.h  atracsysmarker.cpp  atracsyswrapper.cpp  atracsyswrapperimpl.cpp  atracsyswrapperimpl.h  geometryHelper.hpp  helpers_linux.cpp  version.hpp
src/test/: connectionlistener.h  testapp.cpp  wrappertest.cpp
test_package/: CMakeLists.txt  conanfile.py  main.cpp
